--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 settings.py
-/static
+
 /media
 
 # Flask stuff:
@@ -161,3 +161,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+api.js 
+publicapinasa.js
