--- a/Pipfile
+++ b/Pipfile
@@ -42,7 +42,7 @@ whitenoise = "*"
 django-el-pagination = "*"
 django-treebeard = "*"
 django-on-heroku = "*"
-django-storages = {extras = ["dropbox"], version = "*"}
+django-storages = {extras = ["google"], version = "*"}
 dropbox = "*"
 django-dropbox-storage = "*"
 
